--- a/estilo/section1.css
+++ b/estilo/section1.css
@@ -6,7 +6,7 @@ body{
 }
 
 #section1{
-    background-image: url('/imagens/background-hero.png');
+    background-image: url('imagens/background-hero.png');
     background-repeat: no-repeat;  
     background-size: cover;
     background-attachment: fixed;
